added title block

--- a/index.html
+++ b/index.html
@@ -8,5 +8,26 @@
 </head>
 <body>
 
+<div class="container_title">
+    <div class="header_title">
+        <a class="content_center" href="#1">menu</a>
+        <a class="content_center" href="#2">menu</a>
+        <a class="content_center" href="#3">menu</a>
+        <a class="content_center" href="#1">menu</a>
+    </div>
+    <div class="title_title">
+        TOKENIZE YOUR VISUAL CONTENT
+    </div>
+    <div class="description_title">
+        A decentralized ledger for copyright registration of media assets
+    </div>
+    <div class="delimiter delimiter_title"></div>
+    <div class="buttons_title">
+        <button class="left-btn_title">button</button>
+        <button class="right-btn_title">button</button>
+    </div>
+    <button class="single-btn_title">button</button>
+</div>
+
 </body>
 </html>
