done title template

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="content_center" href="#1">menu</a>
         <a class="content_center" href="#2">menu</a>
         <a class="content_center" href="#3">menu</a>
-        <a class="content_center" href="#1">menu</a>
+        <a class="content_center main-btn_title" href="#1">menu</a>
     </div>
     <div class="title_title">
         TOKENIZE YOUR VISUAL CONTENT
@@ -23,10 +23,10 @@
     </div>
     <div class="delimiter delimiter_title"></div>
     <div class="buttons_title">
-        <button class="left-btn_title">button</button>
-        <button class="right-btn_title">button</button>
+        <button class="left-btn_title">MENU</button>
+        <button class="right-btn_title">MENU</button>
     </div>
-    <button class="single-btn_title">button</button>
+    <button class="single-btn_title">MENU</button>
 </div>
 
 </body>
