added description block

--- a/index.html
+++ b/index.html
@@ -30,7 +30,28 @@
 </div>
 
 <div class="container_description">
-
+    <div class="background_description"></div>
+    <div class="body_description">
+        <div class="decoration_description">
+            <div class="small-circle_description"></div>
+            <div class="middle-circle_description"></div>
+            <div class="big-circle_description content_center">
+                <div class="inner-big-circle_description"></div>
+            </div>
+            <div class="middle-circle_description right-middle-circle_description"></div>
+            <div class="small-circle_description right-small-circle_description"></div>
+        </div>
+        <div class="big-delimiter delimiter_description"></div>
+        <div class="title_description">
+            VIM is a decentralized ledger for copyright registration of media assets governed by its stakeholders
+        </div>
+        <div class="description_description">
+            It provides a system of economic incentives and rewards for content sharing to authors and allows agencies
+            and professionals to purchase royalty-free licenses directly from content authors without any intermediaries
+            and with zero fees.
+        </div>
+        <div class="image_description"></div>
+    </div>
 </div>
 
 </body>
