added for-authors block

--- a/index.html
+++ b/index.html
@@ -54,5 +54,62 @@
     </div>
 </div>
 
+<div class="container_for-authors">
+    <div class="background_for-authors"></div>
+    <div class="big-delimiter delimiter_for-authors"></div>
+    <div class="title_for-authors">
+        Key features for Authors
+    </div>
+    <div class="cards_for-author content_center">
+        <div class="card_for-authors">
+            <div class="circle_for-author content_center">
+                <div class="inner-circle_for-author"></div>
+            </div>
+            <div class="body-card_for-authors">
+                <div class="title-card_for-authors">
+                    Decentralized public ledger of ownership records
+                </div>
+                <div class="description-card_for-authors">
+                    Authors are able to register the ownership for their visual content in a decentralized tamper-proof
+                    public database and set a price for license sale
+                </div>
+            </div>
+            <div class="substrate-card_for-authors"></div>
+        </div>
+
+        <div class="card_for-authors center-card_for-authors">
+            <div class="circle_for-author content_center">
+                <div class="inner-circle_for-author"></div>
+            </div>
+            <div class="body-card_for-authors">
+                <div class="title-card_for-authors">
+                    Author rewards for publishing
+                </div>
+                <div class="description-card_for-authors">
+                    50% of VIM token inflation forms Author Reward Pool, which incentivizes authors for content sharing
+                    based on the reaction to this photo from VIM community
+                </div>
+            </div>
+            <div class="substrate-card_for-authors"></div>
+        </div>
+
+        <div class="card_for-authors right-card_for-authors">
+            <div class="circle_for-author content_center">
+                <div class="inner-circle_for-author"></div>
+            </div>
+            <div class="body-card_for-authors">
+                <div class="title-card_for-authors">
+                    Integration with hosting services and social networks
+                </div>
+                <div class="description-card_for-authors">
+                    Authors will have off-chain tools to export visual content from their accounts on Flickr, Instagram,
+                    YouTube and other services.
+                </div>
+            </div>
+            <div class="substrate-card_for-authors"></div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
