added for customers block

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="content_center" href="#3">menu</a>
         <a class="content_center main-btn_title" href="#1">menu</a>
     </div>
-    <div class="title_title">
+    <div class="title">
         TOKENIZE YOUR VISUAL CONTENT
     </div>
     <div class="description_title">
@@ -42,7 +42,7 @@
             <div class="small-circle_description right-small-circle_description"></div>
         </div>
         <div class="big-delimiter delimiter_description"></div>
-        <div class="title_description">
+        <div class="title_description block_title">
             VIM is a decentralized ledger for copyright registration of media assets governed by its stakeholders
         </div>
         <div class="description_description">
@@ -57,57 +57,124 @@
 <div class="container_for-authors">
     <div class="background_for-authors"></div>
     <div class="big-delimiter delimiter_for-authors"></div>
-    <div class="title_for-authors">
+    <div class="title_for-authors block_title">
         Key features for Authors
     </div>
     <div class="cards_for-author content_center">
-        <div class="card_for-authors">
-            <div class="circle_for-author content_center">
-                <div class="inner-circle_for-author"></div>
-            </div>
-            <div class="body-card_for-authors">
-                <div class="title-card_for-authors">
-                    Decentralized public ledger of ownership records
+        <div class="cards_for-author content_center">
+            <div class="card_for-authors">
+                <div class="circle_for-author content_center">
+                    <div class="inner-circle_for-author"></div>
                 </div>
-                <div class="description-card_for-authors">
-                    Authors are able to register the ownership for their visual content in a decentralized tamper-proof
-                    public database and set a price for license sale
+                <div class="body-card_for-authors">
+                    <div class="title-card_for-authors">
+                        Decentralized public ledger of ownership records
+                    </div>
+                    <div class="description-card_for-authors">
+                        Authors are able to register the ownership for their visual content in a decentralized
+                        tamper-proof
+                        public database and set a price for license sale
+                    </div>
+                </div>
+                <div class="substrate-card_for-authors"></div>
+            </div>
+
+            <div class="card_for-authors center-card_for-authors">
+                <div class="circle_for-author content_center">
+                    <div class="inner-circle_for-author"></div>
+                </div>
+                <div class="body-card_for-authors">
+                    <div class="title-card_for-authors">
+                        Author rewards for publishing
+                    </div>
+                    <div class="description-card_for-authors">
+                        50% of VIM token inflation forms Author Reward Pool, which incentivizes authors for content
+                        sharing
+                        based on the reaction to this photo from VIM community
+                    </div>
+                </div>
+                <div class="substrate-card_for-authors"></div>
+            </div>
+
+            <div class="card_for-authors right-card_for-authors">
+                <div class="circle_for-author content_center">
+                    <div class="inner-circle_for-author"></div>
+                </div>
+                <div class="body-card_for-authors">
+                    <div class="title-card_for-authors">
+                        Integration with hosting services and social networks
+                    </div>
+                    <div class="description-card_for-authors">
+                        Authors will have off-chain tools to export visual content from their accounts on Flickr,
+                        Instagram,
+                        YouTube and other services.
+                    </div>
+                </div>
+                <div class="substrate-card_for-authors"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container_for-customers">
+    <div class="big-delimiter delimiter_for-customer"></div>
+    <div class="title_for-customers block_title">
+        key features for customers
+    </div>
+    <div class="cards_for-customers">
+        <div class="wrapper-fro-substrate_for-customers">
+            <div class="card_for-customers">
+                <div class="title-card_for-customers">
+                    Verifiable records of license purchases
+                </div>
+                <div class="description-card_for-customers">
+                    All purchases made by customers are verifiable by interested third-parties and could technically
+                    prove
+                    the fact of license purchase in courts
                 </div>
             </div>
-            <div class="substrate-card_for-authors"></div>
+            <div class="substrate-card_for-customers"></div>
+        </div>
+        <div class="wrapper-fro-substrate_for-customers">
+            <div class="card_for-customers">
+                <div class="title-card_for-customers">
+                    Purchase with 0% fees
+                </div>
+                <div class="description-card_for-customers">
+                    VIM allows customers to pay directly to the author without any third-parties and with zero fees,
+                    while
+                    image and video stocks collect up to 90% fees, making the content 4-5 times more expensive.
+                </div>
+            </div>
+            <div class="substrate-card_for-customers"></div>
+        </div>
+        <div class="wrapper-fro-substrate_for-customers">
+            <div class="card_for-customers">
+                <div class="title-card_for-customers">
+                    Access to unique content form hosting services and social networks
+                </div>
+                <div class="description-card_for-customers">
+                    VIM allows customers to legally use large amounts of unique visual content from social networks and
+                    image/video hostings as part of their digital campaigns, presentations, or on their websites
+                </div>
+            </div>
+            <div class="substrate-card_for-customers"></div>
+        </div>
+        <div class="wrapper-fro-substrate_for-customers">
+            <div class="card_for-customers">
+                <div class="title-card_for-customers">
+                    Access to sales history
+                </div>
+                <div class="description-card_for-customers">
+                    The ledger is transparent and provides access to the information about content purchases, dates,
+                    prices
+                    and overall popularity of content items
+                </div>
+            </div>
+            <div class="substrate-card_for-customers rotate-5"></div>
         </div>
 
-        <div class="card_for-authors center-card_for-authors">
-            <div class="circle_for-author content_center">
-                <div class="inner-circle_for-author"></div>
-            </div>
-            <div class="body-card_for-authors">
-                <div class="title-card_for-authors">
-                    Author rewards for publishing
-                </div>
-                <div class="description-card_for-authors">
-                    50% of VIM token inflation forms Author Reward Pool, which incentivizes authors for content sharing
-                    based on the reaction to this photo from VIM community
-                </div>
-            </div>
-            <div class="substrate-card_for-authors"></div>
-        </div>
-
-        <div class="card_for-authors right-card_for-authors">
-            <div class="circle_for-author content_center">
-                <div class="inner-circle_for-author"></div>
-            </div>
-            <div class="body-card_for-authors">
-                <div class="title-card_for-authors">
-                    Integration with hosting services and social networks
-                </div>
-                <div class="description-card_for-authors">
-                    Authors will have off-chain tools to export visual content from their accounts on Flickr, Instagram,
-                    YouTube and other services.
-                </div>
-            </div>
-            <div class="substrate-card_for-authors"></div>
-        </div>
     </div>
 </div>
 
