--- a/index.html
+++ b/index.html
@@ -174,8 +174,14 @@
             </div>
             <div class="substrate-card_for-customers rotate-5"></div>
         </div>
-
     </div>
+</div>
+
+<div class="container_key-features">
+    <div class="title_key-features block_title">
+        key features for customers
+    </div>
+    <button class="">MENU</button>
 </div>
 
 </body>
