added key features block

--- a/index.html
+++ b/index.html
@@ -178,10 +178,14 @@
 </div>
 
 <div class="container_key-features">
-    <div class="title_key-features block_title">
-        key features for customers
+    <div class="left-block_key-features">
+        <div class="title_key-features block_title">
+            key features for customers
+        </div>
     </div>
-    <button class="">MENU</button>
+    <div class="right-block_key-features">
+        <button class="">MENU</button>
+    </div>
 </div>
 
 </body>
