refactored blocks titles

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="small-circle_description right-small-circle_description"></div>
         </div>
         <div class="big-delimiter delimiter_description"></div>
-        <div class="title_description block_title">
+        <div class="block_title">
             VIM is a decentralized ledger for copyright registration of media assets governed by its stakeholders
         </div>
         <div class="description_description">
@@ -56,8 +56,8 @@
 
 <div class="container_for-authors">
     <div class="background_for-authors"></div>
-    <div class="big-delimiter delimiter_for-authors"></div>
-    <div class="title_for-authors block_title">
+    <div class="big-delimiter"></div>
+    <div class="block_title">
         Key features for Authors
     </div>
     <div class="cards_for-author content_center">
@@ -118,8 +118,8 @@
 
 
 <div class="container_for-customers">
-    <div class="big-delimiter delimiter_for-customer"></div>
-    <div class="title_for-customers block_title">
+    <div class="big-delimiter"></div>
+    <div class="block_title">
         key features for customers
     </div>
     <div class="cards_for-customers">
@@ -185,6 +185,16 @@
     </div>
     <div class="right-block_key-features">
         <button class="">MENU</button>
+    </div>
+</div>
+
+<div class="container_ledger">
+    <div class="substrate_ledger"></div>
+    <div class="body_ledger">
+        <div class="big-delimiter"></div>
+        <div class="block_title">
+            Roadmap for ledger
+        </div>
     </div>
 </div>
 
