added ledger block

--- a/index.html
+++ b/index.html
@@ -195,6 +195,106 @@
         <div class="block_title">
             Roadmap for ledger
         </div>
+        <div class="roadmap_ledger">
+            <div class="card_ledger content_center">
+                <div class="top-decoration_ledger">
+                    <div class="circle_ledger"></div>
+                    <div class="line-after-circle_ledger"></div>
+                </div>
+                <div class="description_ledger">
+                    <div class="date_ledger">
+                        Q4 2018
+                    </div>
+                    <div class="field_ledger">
+                        IPFS-hash database
+                    </div>
+                    <div class="field_ledger">
+                        Token economy
+                    </div>
+                </div>
+                <div class="filler_ledger"></div>
+                <div class="bottom-decoration_ledger"></div>
+            </div>
+            <div class="card_ledger content_center">
+                <div class="top-decoration_ledger">
+                    <div class="line-before-circle_ledger"></div>
+                    <div class="circle_ledger"></div>
+                    <div class="line-after-circle_ledger"></div>
+                </div>
+                <div class="description_ledger">
+                    <div class="date_ledger">
+                        Q1 2019
+                    </div>
+                    <div class="field_ledger">
+                        VIM token inflation and reward pools
+                    </div>
+                    <div class="field_ledger">
+                        Decentralized governance
+                    </div>
+                </div>
+                <div class="filler_ledger"></div>
+                <div class="bottom-decoration_ledger"></div>
+            </div>
+            <div class="card_ledger content_center">
+                <div class="top-decoration_ledger">
+                    <div class="line-before-circle_ledger"></div>
+                    <div class="circle_ledger"></div>
+                    <div class="line-after-circle_ledger"></div>
+                </div>
+                <div class="description_ledger">
+                    <div class="date_ledger">
+                        Q2 2019
+                    </div>
+                    <div class="field_ledger">
+                        Copyright Oracles
+                    </div>
+                    <div class="field_ledger">
+                        Content curation
+                    </div>
+                </div>
+                <div class="filler_ledger"></div>
+                <div class="bottom-decoration_ledger"></div>
+            </div>
+            <div class="card_ledger content_center with-right-border_ledger">
+                <div class="top-decoration_ledger">
+                    <div class="line-before-circle_ledger"></div>
+                    <div class="circle_ledger"></div>
+                    <div class="line-after-circle_ledger"></div>
+                    <div class="fixed-fill_ledger"></div>
+                </div>
+                <div class="description_ledger">
+                    <div class="date_ledger">
+                        Q3 2019
+                    </div>
+                    <div class="field_ledger">
+                        Beneficiary rewards for VIM platforms
+                    </div>
+                    <div class="field_ledger">
+                        Invitation program
+                    </div>
+                </div>
+                <div class="filler_ledger"></div>
+                <div class="bottom-decoration_ledger"></div>
+            </div>
+            <div class="card_ledger content_center">
+                <div class="top-decoration_ledger">
+                    <div class="circle_ledger"></div>
+                    <div class="line-after-circle_ledger"></div>
+                </div>
+                <div class="description_ledger">
+                    <div class="date_ledger">
+                        Q3 2019
+                    </div>
+                    <div class="field_ledger">
+                        Beneficiary rewards for VIM platforms
+                    </div>
+                    <div class="field_ledger">
+                        Invitation program
+                    </div>
+                </div>
+                <div class="filler_ledger"></div>
+            </div>
+        </div>
     </div>
 </div>
 
