--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div class="substrate_ledger"></div>
     <div class="body_ledger">
         <div class="big-delimiter"></div>
-        <div class="block_title">
+        <div class="block_title title_ledger">
             Roadmap for ledger
         </div>
         <div class="roadmap_ledger">
@@ -213,7 +213,6 @@
                     </div>
                 </div>
                 <div class="filler_ledger"></div>
-                <div class="bottom-decoration_ledger"></div>
             </div>
             <div class="card_ledger content_center">
                 <div class="top-decoration_ledger">
