added road map for business block

--- a/index.html
+++ b/index.html
@@ -297,5 +297,111 @@
     </div>
 </div>
 
+<div class="container_business">
+    <div class="big-delimiter"></div>
+    <div class="block_title title_ledger">
+        Roadmap for business
+    </div>
+    <div class="roadmap_ledger">
+        <div class="card_ledger content_center">
+            <div class="top-decoration_ledger">
+                <div class="circle_ledger"></div>
+                <div class="line-after-circle_ledger"></div>
+            </div>
+            <div class="description_ledger">
+                <div class="date_ledger">
+                    Q4 2018
+                </div>
+                <div class="field_ledger">
+                    VIM wallet
+                </div>
+                <div class="field_ledger">
+                    VIM token airdrop
+                </div>
+            </div>
+            <div class="filler_ledger"></div>
+        </div>
+        <div class="card_ledger content_center">
+            <div class="top-decoration_ledger">
+                <div class="line-before-circle_ledger"></div>
+                <div class="circle_ledger"></div>
+                <div class="line-after-circle_ledger"></div>
+            </div>
+            <div class="description_ledger">
+                <div class="date_ledger">
+                    Q1 2019
+                </div>
+                <div class="field_ledger">
+                    VIM token listing on DEXes and exchanges
+                </div>
+                <div class="field_ledger">
+                    Web platform for customers with search
+                </div>
+            </div>
+            <div class="filler_ledger"></div>
+            <div class="bottom-decoration_ledger"></div>
+        </div>
+        <div class="card_ledger content_center">
+            <div class="top-decoration_ledger">
+                <div class="line-before-circle_ledger"></div>
+                <div class="circle_ledger"></div>
+                <div class="line-after-circle_ledger"></div>
+            </div>
+            <div class="description_ledger">
+                <div class="date_ledger">
+                    Q2 2019
+                </div>
+                <div class="field_ledger">
+                    Integration with EOS wallets
+                </div>
+                <div class="field_ledger">
+                    Photography influencers engagement
+                </div>
+            </div>
+            <div class="filler_ledger"></div>
+            <div class="bottom-decoration_ledger"></div>
+        </div>
+        <div class="card_ledger content_center with-right-border_ledger">
+            <div class="top-decoration_ledger">
+                <div class="line-before-circle_ledger"></div>
+                <div class="circle_ledger"></div>
+                <div class="line-after-circle_ledger"></div>
+                <div class="fixed-fill_ledger"></div>
+            </div>
+            <div class="description_ledger">
+                <div class="date_ledger">
+                    Q3 2019
+                </div>
+                <div class="field_ledger">
+                    Community building
+                </div>
+                <div class="field_ledger">
+                    Contextual and performance marketing
+                </div>
+            </div>
+            <div class="filler_ledger"></div>
+            <div class="bottom-decoration_ledger"></div>
+        </div>
+        <div class="card_ledger content_center">
+            <div class="top-decoration_ledger">
+                <div class="circle_ledger"></div>
+                <div class="line-after-circle_ledger"></div>
+            </div>
+            <div class="description_ledger">
+                <div class="date_ledger">
+                    Q3 2019
+                </div>
+                <div class="field_ledger">
+                    USD channel for customers
+                </div>
+                <div class="field_ledger">
+                    Partnerships with stock platforms
+                </div>
+            </div>
+            <div class="filler_ledger"></div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
