added our team block

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css"/>
     <script src="./js/main.js"></script>
     <title>VIM</title>
@@ -402,6 +403,125 @@
         </div>
     </div>
 </div>
-
+<div class="container_team">
+    <div class="big-delimiter"></div>
+    <div class="block_title">
+        Our team
+    </div>
+    <div class="body_team content_center">
+        <div class="card_team">
+            <div class="container-avatar_team content_center">
+                <div class="avatar_team"></div>
+            </div>
+            <div class="body-card_team">
+                <div class="full-name_team">
+                    Dorothy Diaz
+                </div>
+                <div class="position_team">
+                    Director
+                </div>
+            </div>
+            <div class="substrate-card_team"></div>
+        </div>
+        <div class="card_team">
+            <div class="container-avatar_team content_center">
+                <div class="avatar_team"></div>
+            </div>
+            <div class="body-card_team">
+                <div class="full-name_team">
+                    Dorothy Diaz
+                </div>
+                <div class="position_team">
+                    Director
+                </div>
+            </div>
+            <div class="substrate-card_team"></div>
+        </div>
+        <div class="card_team">
+            <div class="container-avatar_team content_center">
+                <div class="avatar_team"></div>
+            </div>
+            <div class="body-card_team">
+                <div class="full-name_team">
+                    Dorothy Diaz
+                </div>
+                <div class="position_team">
+                    Director
+                </div>
+            </div>
+            <div class="substrate-card_team"></div>
+        </div>
+        <div class="card_team">
+            <div class="container-avatar_team content_center">
+                <div class="avatar_team"></div>
+            </div>
+            <div class="body-card_team">
+                <div class="full-name_team">
+                    Dorothy Diaz
+                </div>
+                <div class="position_team">
+                    Director
+                </div>
+            </div>
+            <div class="substrate-card_team"></div>
+        </div>
+        <div class="card_team">
+            <div class="container-avatar_team content_center">
+                <div class="avatar_team"></div>
+            </div>
+            <div class="body-card_team">
+                <div class="full-name_team">
+                    Dorothy Diaz
+                </div>
+                <div class="position_team">
+                    Director
+                </div>
+            </div>
+            <div class="substrate-card_team"></div>
+        </div>
+        <div class="card_team">
+            <div class="container-avatar_team content_center">
+                <div class="avatar_team"></div>
+            </div>
+            <div class="body-card_team">
+                <div class="full-name_team">
+                    Dorothy Diaz
+                </div>
+                <div class="position_team">
+                    Director
+                </div>
+            </div>
+            <div class="substrate-card_team"></div>
+        </div>
+        <div class="card_team">
+            <div class="container-avatar_team content_center">
+                <div class="avatar_team"></div>
+            </div>
+            <div class="body-card_team">
+                <div class="full-name_team">
+                    Dorothy Diaz
+                </div>
+                <div class="position_team">
+                    Director
+                </div>
+            </div>
+            <div class="substrate-card_team"></div>
+        </div>
+        <div class="card_team">
+            <div class="container-avatar_team content_center">
+                <div class="avatar_team"></div>
+            </div>
+            <div class="body-card_team">
+                <div class="full-name_team">
+                    Dorothy Diaz
+                </div>
+                <div class="position_team">
+                    Director
+                </div>
+            </div>
+            <div class="substrate-card_team"></div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
