added footer block

--- a/index.html
+++ b/index.html
@@ -10,29 +10,31 @@
 <body>
 
 <div class="container_title">
-    <div class="header_title">
-        <a class="content_center" href="#1">menu</a>
-        <a class="content_center" href="#2">menu</a>
-        <a class="content_center" href="#3">menu</a>
-        <a class="content_center main-btn_title" href="#1">menu</a>
+    <div class="work_body">
+        <div class="header_title">
+            <a class="content_center" href="#1">menu</a>
+            <a class="content_center" href="#2">menu</a>
+            <a class="content_center" href="#3">menu</a>
+            <a class="content_center main-btn_title" href="#1">menu</a>
+        </div>
+        <div class="title">
+            TOKENIZE YOUR VISUAL CONTENT
+        </div>
+        <div class="description_title">
+            A decentralized ledger for copyright registration of media assets
+        </div>
+        <div class="delimiter delimiter_title"></div>
+        <div class="buttons_title">
+            <button class="left-btn_title">MENU</button>
+            <button class="right-btn_title">MENU</button>
+        </div>
+        <button class="single-btn_title">MENU</button>
     </div>
-    <div class="title">
-        TOKENIZE YOUR VISUAL CONTENT
-    </div>
-    <div class="description_title">
-        A decentralized ledger for copyright registration of media assets
-    </div>
-    <div class="delimiter delimiter_title"></div>
-    <div class="buttons_title">
-        <button class="left-btn_title">MENU</button>
-        <button class="right-btn_title">MENU</button>
-    </div>
-    <button class="single-btn_title">MENU</button>
 </div>
 
 <div class="container_description">
     <div class="background_description"></div>
-    <div class="body_description">
+    <div class="work_body body_description">
         <div class="decoration_description">
             <div class="small-circle_description"></div>
             <div class="middle-circle_description"></div>
@@ -117,7 +119,6 @@
     </div>
 </div>
 
-
 <div class="container_for-customers">
     <div class="big-delimiter"></div>
     <div class="block_title">
@@ -191,7 +192,7 @@
 
 <div class="container_ledger">
     <div class="substrate_ledger"></div>
-    <div class="body_ledger">
+    <div class="work_body body_ledger">
         <div class="big-delimiter"></div>
         <div class="block_title title_ledger">
             Roadmap for ledger
@@ -298,7 +299,7 @@
     </div>
 </div>
 
-<div class="container_business">
+<div class="work_body container_business">
     <div class="big-delimiter"></div>
     <div class="block_title title_ledger">
         Roadmap for business
@@ -403,12 +404,13 @@
         </div>
     </div>
 </div>
+
 <div class="container_team">
     <div class="big-delimiter"></div>
     <div class="block_title">
         Our team
     </div>
-    <div class="body_team content_center">
+    <div class="work_body body_team content_center">
         <div class="card_team">
             <div class="container-avatar_team content_center">
                 <div class="avatar_team"></div>
@@ -520,6 +522,65 @@
                 </div>
             </div>
             <div class="substrate-card_team"></div>
+        </div>
+    </div>
+</div>
+
+<div class="container_footer">
+    <div class="big-delimiter"></div>
+    <div class="block_title">
+        subscribe to newsletter
+    </div>
+    <div class="work_body">
+        <div class="subscribe_footer">
+            <input placeholder="Your email address"/>
+            <button>SUBSCRIBE</button>
+        </div>
+    </div>
+    <div class="panel_footer">
+        <div class="work_body content_center">
+            <div class="left-panel_footer">
+                <div class="header-panel_footer">
+                    HEADER
+                </div>
+                <div class="description-panel_footer">
+                    Advertising is telling the world how great you are, while publicity is having others tell the world
+                    how
+                    great you are.
+                </div>
+            </div>
+            <div class="center-panel_footer">
+                <div class="header-panel_footer">
+                    HEADER
+                </div>
+                <div class="block-link-panel_footer">
+                    <div class="link-panel_footer">Hettie Stone</div>
+                    <div class="link-panel_footer">Hettie Stone</div>
+                    <div class="link-panel_footer">Hettie Stone</div>
+                </div>
+            </div>
+            <div class="right-panel_footer">
+                <div class="header-panel_footer">
+                    HEADER
+                </div>
+                <div class="block-link-panel_footer">
+                    <div class="link-panel_footer">Hettie Stone</div>
+                    <div class="link-panel_footer">Hettie Stone</div>
+                    <div class="link-panel_footer">Hettie Stone</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="work_body">
+        <div class="navigation_footer">
+            <div class="left-navigation_footer">
+                <a href="#1">HEADER</a>
+            </div>
+            <div class="right-navigation_footer">
+                <a href="#1">HEADER</a>
+                <a href="#1">HEADER</a>
+                <a href="#1">HEADER</a>
+            </div>
         </div>
     </div>
 </div>
