fixed css for blocks: for-author, for0customers, key-features

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="middle-circle_description right-middle-circle_description"></div>
             <div class="small-circle_description right-small-circle_description"></div>
         </div>
-        <div class="big-delimiter delimiter_description"></div>
+        <div class="big-delimiter"></div>
         <div class="block_title">
             VIM is a decentralized ledger for copyright registration of media assets governed by its stakeholders
         </div>
@@ -120,6 +120,7 @@
 </div>
 
 <div class="container_for-customers">
+    <div class="background_for-customers"></div>
     <div class="big-delimiter"></div>
     <div class="block_title">
         key features for customers
