--- a/index.html
+++ b/index.html
@@ -191,12 +191,122 @@
     </div>
 </div>
 
-<div class="container_ledger">
+<div class="container_ledger content_center">
     <div class="substrate_ledger"></div>
-    <div class="work_body body_ledger">
+    <div class="body_ledger">
+        <div class="work_body">
+            <div class="big-delimiter"></div>
+            <div class="block_title title_ledger">
+                Roadmap for ledger
+            </div>
+            <div class="roadmap_ledger">
+                <div class="card_ledger content_center">
+                    <div class="top-decoration_ledger">
+                        <div class="circle_ledger"></div>
+                        <div class="line-after-circle_ledger"></div>
+                    </div>
+                    <div class="description_ledger">
+                        <div class="date_ledger">
+                            Q4 2018
+                        </div>
+                        <div class="field_ledger">
+                            IPFS-hash database
+                        </div>
+                        <div class="field_ledger">
+                            Token economy
+                        </div>
+                    </div>
+                    <div class="filler_ledger"></div>
+                </div>
+                <div class="card_ledger content_center">
+                    <div class="top-decoration_ledger">
+                        <div class="line-before-circle_ledger"></div>
+                        <div class="circle_ledger"></div>
+                        <div class="line-after-circle_ledger"></div>
+                    </div>
+                    <div class="description_ledger">
+                        <div class="date_ledger">
+                            Q1 2019
+                        </div>
+                        <div class="field_ledger">
+                            VIM token inflation and reward pools
+                        </div>
+                        <div class="field_ledger">
+                            Decentralized governance
+                        </div>
+                    </div>
+                    <div class="filler_ledger"></div>
+                    <div class="bottom-decoration_ledger"></div>
+                </div>
+                <div class="card_ledger content_center">
+                    <div class="top-decoration_ledger">
+                        <div class="line-before-circle_ledger"></div>
+                        <div class="circle_ledger"></div>
+                        <div class="line-after-circle_ledger"></div>
+                    </div>
+                    <div class="description_ledger">
+                        <div class="date_ledger">
+                            Q2 2019
+                        </div>
+                        <div class="field_ledger">
+                            Copyright Oracles
+                        </div>
+                        <div class="field_ledger">
+                            Content curation
+                        </div>
+                    </div>
+                    <div class="filler_ledger"></div>
+                    <div class="bottom-decoration_ledger"></div>
+                </div>
+                <div class="card_ledger content_center with-right-border_ledger">
+                    <div class="top-decoration_ledger">
+                        <div class="line-before-circle_ledger"></div>
+                        <div class="circle_ledger"></div>
+                        <div class="line-after-circle_ledger"></div>
+                        <div class="fixed-fill_ledger"></div>
+                    </div>
+                    <div class="description_ledger">
+                        <div class="date_ledger">
+                            Q3 2019
+                        </div>
+                        <div class="field_ledger">
+                            Beneficiary rewards for VIM platforms
+                        </div>
+                        <div class="field_ledger">
+                            Invitation program
+                        </div>
+                    </div>
+                    <div class="filler_ledger"></div>
+                    <div class="bottom-decoration_ledger"></div>
+                </div>
+                <div class="card_ledger content_center">
+                    <div class="top-decoration_ledger">
+                        <div class="circle_ledger"></div>
+                        <div class="line-after-circle_ledger"></div>
+                    </div>
+                    <div class="description_ledger">
+                        <div class="date_ledger">
+                            Q3 2019
+                        </div>
+                        <div class="field_ledger">
+                            Beneficiary rewards for VIM platforms
+                        </div>
+                        <div class="field_ledger">
+                            Invitation program
+                        </div>
+                    </div>
+                    <div class="filler_ledger"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container_business">
+    <div class="work_body">
         <div class="big-delimiter"></div>
         <div class="block_title title_ledger">
-            Roadmap for ledger
+            Roadmap for business
         </div>
         <div class="roadmap_ledger">
             <div class="card_ledger content_center">
@@ -209,10 +319,10 @@
                         Q4 2018
                     </div>
                     <div class="field_ledger">
-                        IPFS-hash database
+                        VIM wallet
                     </div>
                     <div class="field_ledger">
-                        Token economy
+                        VIM token airdrop
                     </div>
                 </div>
                 <div class="filler_ledger"></div>
@@ -228,10 +338,10 @@
                         Q1 2019
                     </div>
                     <div class="field_ledger">
-                        VIM token inflation and reward pools
+                        VIM token listing on DEXes and exchanges
                     </div>
                     <div class="field_ledger">
-                        Decentralized governance
+                        Web platform for customers with search
                     </div>
                 </div>
                 <div class="filler_ledger"></div>
@@ -248,10 +358,10 @@
                         Q2 2019
                     </div>
                     <div class="field_ledger">
-                        Copyright Oracles
+                        Integration with EOS wallets
                     </div>
                     <div class="field_ledger">
-                        Content curation
+                        Photography influencers engagement
                     </div>
                 </div>
                 <div class="filler_ledger"></div>
@@ -269,10 +379,10 @@
                         Q3 2019
                     </div>
                     <div class="field_ledger">
-                        Beneficiary rewards for VIM platforms
+                        Community building
                     </div>
                     <div class="field_ledger">
-                        Invitation program
+                        Contextual and performance marketing
                     </div>
                 </div>
                 <div class="filler_ledger"></div>
@@ -288,120 +398,14 @@
                         Q3 2019
                     </div>
                     <div class="field_ledger">
-                        Beneficiary rewards for VIM platforms
+                        USD channel for customers
                     </div>
                     <div class="field_ledger">
-                        Invitation program
+                        Partnerships with stock platforms
                     </div>
                 </div>
                 <div class="filler_ledger"></div>
             </div>
-        </div>
-    </div>
-</div>
-
-<div class="work_body container_business">
-    <div class="big-delimiter"></div>
-    <div class="block_title title_ledger">
-        Roadmap for business
-    </div>
-    <div class="roadmap_ledger">
-        <div class="card_ledger content_center">
-            <div class="top-decoration_ledger">
-                <div class="circle_ledger"></div>
-                <div class="line-after-circle_ledger"></div>
-            </div>
-            <div class="description_ledger">
-                <div class="date_ledger">
-                    Q4 2018
-                </div>
-                <div class="field_ledger">
-                    VIM wallet
-                </div>
-                <div class="field_ledger">
-                    VIM token airdrop
-                </div>
-            </div>
-            <div class="filler_ledger"></div>
-        </div>
-        <div class="card_ledger content_center">
-            <div class="top-decoration_ledger">
-                <div class="line-before-circle_ledger"></div>
-                <div class="circle_ledger"></div>
-                <div class="line-after-circle_ledger"></div>
-            </div>
-            <div class="description_ledger">
-                <div class="date_ledger">
-                    Q1 2019
-                </div>
-                <div class="field_ledger">
-                    VIM token listing on DEXes and exchanges
-                </div>
-                <div class="field_ledger">
-                    Web platform for customers with search
-                </div>
-            </div>
-            <div class="filler_ledger"></div>
-            <div class="bottom-decoration_ledger"></div>
-        </div>
-        <div class="card_ledger content_center">
-            <div class="top-decoration_ledger">
-                <div class="line-before-circle_ledger"></div>
-                <div class="circle_ledger"></div>
-                <div class="line-after-circle_ledger"></div>
-            </div>
-            <div class="description_ledger">
-                <div class="date_ledger">
-                    Q2 2019
-                </div>
-                <div class="field_ledger">
-                    Integration with EOS wallets
-                </div>
-                <div class="field_ledger">
-                    Photography influencers engagement
-                </div>
-            </div>
-            <div class="filler_ledger"></div>
-            <div class="bottom-decoration_ledger"></div>
-        </div>
-        <div class="card_ledger content_center with-right-border_ledger">
-            <div class="top-decoration_ledger">
-                <div class="line-before-circle_ledger"></div>
-                <div class="circle_ledger"></div>
-                <div class="line-after-circle_ledger"></div>
-                <div class="fixed-fill_ledger"></div>
-            </div>
-            <div class="description_ledger">
-                <div class="date_ledger">
-                    Q3 2019
-                </div>
-                <div class="field_ledger">
-                    Community building
-                </div>
-                <div class="field_ledger">
-                    Contextual and performance marketing
-                </div>
-            </div>
-            <div class="filler_ledger"></div>
-            <div class="bottom-decoration_ledger"></div>
-        </div>
-        <div class="card_ledger content_center">
-            <div class="top-decoration_ledger">
-                <div class="circle_ledger"></div>
-                <div class="line-after-circle_ledger"></div>
-            </div>
-            <div class="description_ledger">
-                <div class="date_ledger">
-                    Q3 2019
-                </div>
-                <div class="field_ledger">
-                    USD channel for customers
-                </div>
-                <div class="field_ledger">
-                    Partnerships with stock platforms
-                </div>
-            </div>
-            <div class="filler_ledger"></div>
         </div>
     </div>
 </div>
