--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="work_body">
             <div class="big-delimiter"></div>
             <div class="block_title title_ledger">
-                Roadmap for ledger
+                LEDGER ROADMAP
             </div>
             <div class="roadmap_ledger">
                 <div class="card_ledger content_center">
@@ -234,7 +234,6 @@
                         </div>
                     </div>
                     <div class="filler_ledger"></div>
-                    <div class="bottom-decoration_ledger"></div>
                 </div>
                 <div class="card_ledger content_center">
                     <div class="top-decoration_ledger">
@@ -254,14 +253,12 @@
                         </div>
                     </div>
                     <div class="filler_ledger"></div>
-                    <div class="bottom-decoration_ledger"></div>
                 </div>
-                <div class="card_ledger content_center with-right-border_ledger">
+                <div class="card_ledger content_center">
                     <div class="top-decoration_ledger">
                         <div class="line-before-circle_ledger"></div>
                         <div class="circle_ledger"></div>
                         <div class="line-after-circle_ledger"></div>
-                        <div class="fixed-fill_ledger"></div>
                     </div>
                     <div class="description_ledger">
                         <div class="date_ledger">
@@ -275,12 +272,12 @@
                         </div>
                     </div>
                     <div class="filler_ledger"></div>
-                    <div class="bottom-decoration_ledger"></div>
                 </div>
                 <div class="card_ledger content_center">
                     <div class="top-decoration_ledger">
+                        <div class="line-before-circle_ledger"></div>
                         <div class="circle_ledger"></div>
-                        <div class="line-after-circle_ledger"></div>
+                        <div class="after-circle_ledger"></div>
                     </div>
                     <div class="description_ledger">
                         <div class="date_ledger">
@@ -304,7 +301,7 @@
     <div class="work_body">
         <div class="big-delimiter"></div>
         <div class="block_title title_ledger">
-            Roadmap for business
+            BUSINESS ROADMAP
         </div>
         <div class="roadmap_ledger">
             <div class="card_ledger content_center">
@@ -343,7 +340,6 @@
                     </div>
                 </div>
                 <div class="filler_ledger"></div>
-                <div class="bottom-decoration_ledger"></div>
             </div>
             <div class="card_ledger content_center">
                 <div class="top-decoration_ledger">
@@ -363,14 +359,12 @@
                     </div>
                 </div>
                 <div class="filler_ledger"></div>
-                <div class="bottom-decoration_ledger"></div>
             </div>
-            <div class="card_ledger content_center with-right-border_ledger">
+            <div class="card_ledger content_center">
                 <div class="top-decoration_ledger">
                     <div class="line-before-circle_ledger"></div>
                     <div class="circle_ledger"></div>
                     <div class="line-after-circle_ledger"></div>
-                    <div class="fixed-fill_ledger"></div>
                 </div>
                 <div class="description_ledger">
                     <div class="date_ledger">
@@ -384,12 +378,12 @@
                     </div>
                 </div>
                 <div class="filler_ledger"></div>
-                <div class="bottom-decoration_ledger"></div>
             </div>
             <div class="card_ledger content_center">
                 <div class="top-decoration_ledger">
+                    <div class="line-before-circle_ledger"></div>
                     <div class="circle_ledger"></div>
-                    <div class="line-after-circle_ledger"></div>
+                    <div class="after-circle_ledger"></div>
                 </div>
                 <div class="description_ledger">
                     <div class="date_ledger">
