added css for ledger on middle screen

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     </div>
                     <div class="filler_ledger"></div>
                 </div>
-                <div class="card_ledger content_center">
+                <div class="card_ledger content_center right-card_ledger">
                     <div class="top-decoration_ledger">
                         <div class="line-before-circle_ledger"></div>
                         <div class="circle_ledger"></div>
@@ -254,7 +254,7 @@
                     </div>
                     <div class="filler_ledger"></div>
                 </div>
-                <div class="card_ledger content_center">
+                <div class="card_ledger content_center right-card_ledger">
                     <div class="top-decoration_ledger">
                         <div class="line-before-circle_ledger"></div>
                         <div class="circle_ledger"></div>
