--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 </div>
                 <div class="filler_ledger"></div>
             </div>
-            <div class="card_ledger content_center">
+            <div class="card_ledger content_center right-card_ledger">
                 <div class="top-decoration_ledger">
                     <div class="line-before-circle_ledger"></div>
                     <div class="circle_ledger"></div>
@@ -360,7 +360,7 @@
                 </div>
                 <div class="filler_ledger"></div>
             </div>
-            <div class="card_ledger content_center">
+            <div class="card_ledger content_center right-card_ledger">
                 <div class="top-decoration_ledger">
                     <div class="line-before-circle_ledger"></div>
                     <div class="circle_ledger"></div>
